# vivaestate-backend

./: .dockerignore  Dockerfile  README.md  build.sh  docker-compose.yml  pyproject.toml  requirements.txt  schema.yml
accounts/: admin.py  models.py  permission.py  serializers.py  signals.py  urls.py  views.py
agent_crm/: apps.py  models.py  serializers.py  signals.py  views.py
app/: admin.py  models.py
apps/accounts/: admin.py  apps.py  models.py  permission.py  serializers.py  signals.py  urls.py  views.py
apps/accounts/migrations/: 0001_initial.py
apps/accounts/v1/: serializers.py  urls.py  views.py
apps/agent_crm/: apps.py  models.py  serializers.py  signals.py  tasks.py  urls.py  utils.py  views.py
apps/agent_crm/migrations/: 0001_initial.py
apps/agent_crm/v1/: serializers.py  urls.py  views.py
apps/ai_assistant/: admin.py  apps.py  models.py  serializers.py  signals.py  urls.py  utils.py  views.py
apps/ai_assistant/ai_functions/: embedding_service.py  helper_function.py  pdf_extractor.py  save_function.py
apps/ai_assistant/migrations/: 0001_initial.py
apps/ai_assistant/service/: __init__.py  embedding_service.py  helper_function.py  save_function.py
apps/ai_assistant/services/: __init__.py  helper_function.py  save_function.py
apps/ai_assistant/v1/: serializers.py  urls.py  views.py
apps/client_app/: filters.py  urls.py
apps/properties/: admin.py  apps.py  filters.py  models.py  serializers.py  urls.py  views.py
apps/properties/migrations/: 0001_initial.py  0002_remove_property_image_remove_property_latitude_and_more.py
apps/properties/v1/: serializers.py  urls.py  views.py
apps/social/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
apps/social/migrations/: 0001_initial.py
apps/social/v1/: serializers.py  views.py
apps/subscription/: admin.py  apps.py  models.py  serializers.py  tasks.py  urls.py  utils.py  views.py
client_app/: admin.py  models.py  property_form.html  property_form.js  serializers.py  urls.py  views.py
drf_project/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
drf_project/settings/: base.py  development.py  production.py
services/: __init__.py  choices.py  email.py  main.py  permission.py  serializers.py  utils.py
social/: models.py  serializers.py  urls.py  views.py
subscription/: admin.py  models.py  serializers.py  tasks.py  urls.py  views.py
template/accounts/: verification.html
templates/: base.html
templates/accounts/: password_reset.html  verification.html
templates/crm/: agent_notification.html  lead_notification.html  send_lead.html  user_confirmation.html
templates/social/: interested_buyer.html  interested_confirmed.html
(+5 files in other folders)
